# yul-agentic

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  License  Makefile  README.md  compose.yml  feature_flags.yml  pyproject.toml  requirements.txt  run.py
.config/: .markdown-lint.yml
.github/: copilot-instructions.md  copilot-setup-steps.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: ai-fix-request.yml
.github/aw/: actions-lock.json
.github/instructions/: docker.instructions.md  gha.instructions.md
.github/prompt/: issue-fix.prompt.md
.github/workflows/: agentics-maintenance.yml  ai-issue-fix.yml  copilot-on-issue.yml  copilot-setup-steps.yml  issue-ball-roller.lock.yml  issue-ball-roller.md  issue-to-pr-agent.md  issue-triage.lock.yml  issue-triage.md  main.yml
docs/: AI_AGENTIC_WORKFLOW.md  EXPLOITS.md  PROJECT_SUMMARY.txt  QUICKSTART.md  TESTING.md  VULNERABILITIES.md
src/: __init__.py  auth.py  database.py  feature_flags.py  models.py  utils.py
src/config/: __init__.py  config.py
tests/: README.md  __init__.py  conftest.py  test_auth.py  test_database.py  test_feature_flags.py  test_models.py  test_routes.py  test_utils.py
web/static/css/: style.css
web/static/js/: main.js
web/templates/: admin.html  base.html  login.html  register.html  search.html  todo_detail.html  todos.html
